<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    tools:context=".OnBoardingScreen">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sample_margin"
        android:text="@string/tv_app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivAppImage"
        android:layout_width="@dimen/sample_image_size"
        android:layout_height="@dimen/sample_image_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sample_margin"
        android:src="@drawable/app_image" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sample_margin"
        android:textSize="28sp"
        android:text="@string/tv_boarding" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_next" />

</LinearLayout>